# polysolve

./: LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml  test_florp.yml
docs/source/: conf.py  index.rst  usage.rst
docs/source/api/: modules.rst  polysolver.rst
polysolver/: __init__.py  solver.py
tests/: test_quadratic.py
