[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolver"
authors = [{name = "Leonie Woodland", email = "leonie.woodland@stfc.ac.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "Solves polynomials of order 2 or 3"
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["cowsay"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/woodland-l/polysolve"
Repository="https://github.com/woodland-l/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolver.__version__"}
